test(expense): Temp 엔티티 적용 및 로직 변경으로 테스트 수정